--- a/src/app/components/notes-list/notes-list.component.html
+++ b/src/app/components/notes-list/notes-list.component.html
@@ -6,7 +6,7 @@
     </mat-list-item>
 </mat-list>
 
-<button *ngIf="!selected; else selectedBlock" mat-fab class="fixed bottom right" color="primary" routerLink="create">
+<button *ngIf="!selected; else selectedBlock" mat-fab class="fixed bottom right" color="primary" routerLink="new">
     <mat-icon>add</mat-icon>
 </button>
 <ng-template #selectedBlock>
