2nd usable version, fixed tests, updated readme, bump version to 0.1.0

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-  <span>{{'Notes' | translate}}</span>
+  <span data-test="title">{{'Notes' | translate}}</span>
   <span class="fillup"></span>
   <span>
     <button mat-mini-fab (click)="setLang('en')"
